@@ -345,7 +345,7 @@ public class AggregateTimeSeriesCanvas extends Canvas {
 							
 							// only do once for first line series
 							if (!setCycles) {
-								cycleNumbers.add(new Integer(cycleNumber));	
+								cycleNumbers.add(Integer.valueOf(cycleNumber));	
 								}
 						} // for cycleNumber
 						
@@ -649,7 +649,7 @@ public class AggregateTimeSeriesCanvas extends Canvas {
 	protected void resetData() {
 		clearData();
 	
-		cycleNumbers.add(new Integer(0));
+		cycleNumbers.add(Integer.valueOf(0));
 	}
 
 	private void clearData() {
